Share Part payment redirect auto cancellation done

--- a/ShareMyTaxi/src/pages/main/main.html
+++ b/ShareMyTaxi/src/pages/main/main.html
@@ -1,6 +1,6 @@
-<ion-menu class="main-menu" [content]="HomeContent">
-  <ion-content>
-    <ion-list>
+<ion-menu ng-show="false" class="main-menu" [content]="HomeContent">
+  <ion-content  [ngSwitch]="type">
+    <ion-list *ngSwitchCase="'Passenger'">
       <button ion-item menuClose (click)="openPage('Payment')">
         Payment
       </button>
@@ -29,8 +29,35 @@
         Test View
       </button>
     </ion-list>
-
+    <ion-list *ngSwitchCase="'Driver'">
+      <button ion-item menuClose (click)="openPage('Payment')">
+        Payment
+      </button>
+      <button ion-item menuClose (click)="openPage('PickRide')">
+        Pick|Driver
+      </button>
+      <button ion-item menuClose (click)="openPage('DriverShareTabs')">
+        Share|Driver
+      </button>
+      <button ion-item menuClose (click)="openPage('Profile')">
+        Profile
+      </button>
+      <button ion-item menuClose (click)="openPage('DriverPayment')">
+        payement | driver
+      </button>
+      <button ion-item menuClose (click)="openPage('Payment')">
+        Payment
+      </button>
+      <button ion-item menuClose (click)="openPage('PaymentShared')">
+        Payment Shared
+      </button>
+      <button ion-item menuClose (click)="openPage('JoinShareRide')">
+        Join Share Ride
+      </button>
+      <button ion-item menuClose (click)="openPage('test')">
+        Test View
+      </button>
+    </ion-list>
   </ion-content>
-
 </ion-menu>
 <ion-nav #HomeContent [root]="rootPage"></ion-nav>
