--- a/ShareMyTaxi/src/pages/tabs/tabs.html
+++ b/ShareMyTaxi/src/pages/tabs/tabs.html
@@ -1,5 +1,5 @@
 <ion-tabs color="AppColor">
-    <ion-tab tabTitle="Home" tabIcon="home" [root]="homePage"></ion-tab>
+    <ion-tab tabTitle="Home" tabIcon="home" [root]="homePage"></ion-tab>    
+    <ion-tab tabTitle="Upcoming" tabIcon="arrow-dropup-circle" [root]="upComingPage"></ion-tab>
     <ion-tab tabTitle="Payment" tabIcon="card" [root]="paymentPage"></ion-tab>
-    <ion-tab tabTitle="User" tabIcon="person" [root]="proflePage"></ion-tab>
 </ion-tabs>
