--- a/ShareMyTaxi/src/pages/profile-home/profile-home.html
+++ b/ShareMyTaxi/src/pages/profile-home/profile-home.html
@@ -41,6 +41,23 @@
     </ion-col>
   </ion-row>
   <ion-row padding>
+      <ion-col col-4>
+        <p> NIC</p>
+      </ion-col>
+      <ion-col col-8>
+        <p>{{profile.nic}}</p>
+      </ion-col>
+    </ion-row>
+
+    <ion-row padding>
+      <ion-col col-4>
+        <p> Phone_No</p>
+      </ion-col>
+      <ion-col col-8>
+        <p>{{profile.tel}}</p>
+      </ion-col>
+    </ion-row>  
+  <ion-row padding>
     <ion-col col-4>
       <p> Type</p>
     </ion-col>
