--- a/ShareMyTaxi/src/index.html
+++ b/ShareMyTaxi/src/index.html
@@ -37,7 +37,7 @@
   <!-- The bundle js is generated during the build process -->
   <script src="build/main.js"></script>
   
-  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAlxK1_fXBaDgRxyVxwH3b-BYT_Ag-QaaI"></script
+  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAlxK1_fXBaDgRxyVxwH3b-BYT_Ag-QaaI&libraries=places"></script>
 
 </body>
 </html>
