Pick and book views

--- a/ShareMyTaxi/src/pages/main/main.html
+++ b/ShareMyTaxi/src/pages/main/main.html
@@ -4,31 +4,15 @@
       <button ion-item menuClose (click)="openPage('Payment')">
         Payment
       </button>
-      <button ion-item menuClose (click)="openPage('PickRide')">
-        Pick|Driver
-      </button>
-      <button ion-item menuClose (click)="openPage('DriverShareTabs')">
-        Share|Driver
-      </button>
       <button ion-item menuClose (click)="openPage('Profile')">
         Profile
       </button>
-      <button ion-item menuClose (click)="openPage('DriverPayment')">
-        payement | driver
-      </button>
-      <button ion-item menuClose (click)="openPage('Payment')">
-        Payment
-      </button>
-      <button ion-item menuClose (click)="openPage('PaymentShared')">
-        Payment Shared
-      </button>
       <button ion-item menuClose (click)="openPage('JoinShareRide')">
-        Join Share Ride
+        Join Ride
       </button>
-      <button ion-item menuClose (click)="openPage('test')">
-        Test View
-      </button>
+
     </ion-list>
+    
     <ion-list *ngSwitchCase="'Driver'">
       <button ion-item menuClose (click)="openPage('Payment')">
         Payment
