--- a/ShareMyTaxi/src/pages/payment-normal/payment-normal.html
+++ b/ShareMyTaxi/src/pages/payment-normal/payment-normal.html
@@ -1,44 +1,140 @@
 
-<ion-header class="header">
+<ion-header >
+  <ion-toolbar color="AppColor">
+    <ion-title>Payment History</ion-title>
+  </ion-toolbar>
 
-  <ion-navbar > 
-    <ion-title>payment Normal Ride</ion-title>
-  </ion-navbar>
-
+  <ion-toolbar no-border-top color="AppColor">
+    <ion-segment [(ngModel)]="ride" color="secondary">
+      <ion-segment-button value="share">   Share  </ion-segment-button>
+      <ion-segment-button  value="pick">  Ride  </ion-segment-button>
+      <ion-segment-button  value="book">  Book   </ion-segment-button>
+    </ion-segment>
+  </ion-toolbar>
 </ion-header>
 
 
-<ion-content class="payment-content" padding>
-  <div class="customer-box">
-    <div class="image">
-      <ion-thumbnail item-left>
-        <ion-img style="width:50px;height:50px" src="https://lh3.googleusercontent.com/Kb739IIZG0c2HkGpiXDm9frX2mOMtMrAkSuKYEZs6-1pidZLQCg0mekK_fHTfC5Dmg=w300"></ion-img>
-      </ion-thumbnail>
-    </div>
-    <ion-card>
+<ion-content [ngSwitch]="ride">
+  <ion-list  *ngSwitchCase="'pick'">
+     <ion-item  *ngFor="let HistoryPickRide of HistoryPickRides">
+        <ion-card >
+        <ion-row padding>
+        <ion-col col-1>
+        <ion-icon name="pin">  </ion-icon>
+      </ion-col>  
+      <ion-col col-3>
+        <p> From</p>
+        </ion-col>
+        <ion-col col-8>
+          <p>{{HistoryPickRide[0].from}}</p>
+        </ion-col>  
+      </ion-row>
+      <ion-row padding>
+        <ion-col col-1>
+        <ion-icon name="pin">  </ion-icon>
+      </ion-col>
+        <ion-col col-3>
+          <p> To</p>
+        </ion-col>
+        <ion-col col-8>
+          <p>{{HistoryPickRide[0].to}}</p>
+        </ion-col>
+      </ion-row>   
+      <ion-row padding>
+          <ion-col col-1>
+          <ion-icon name="logo-usd"></ion-icon>
+          </ion-col>
+        <ion-col col-3>
+          <p> Fee</p>
+        </ion-col>
+        <ion-col col-8>
+          <p>{{HistoryPickRide[0].amount}}</p>
+        </ion-col>
+      </ion-row>
+      </ion-card>     
+     </ion-item> 
+  </ion-list>
 
+<ion-list  *ngSwitchCase="'book'">
+     <ion-item  *ngFor="let HistoryBookRide of HistoryBookRides">
+        <ion-card >
+        <ion-row padding>
+        <ion-col col-1>
+        <ion-icon name="pin">  </ion-icon>
+      </ion-col>  
+      <ion-col col-3>
+        <p> From</p>
+        </ion-col>
+        <ion-col col-8>
+          <p>{{HistoryBookRide[0].from}}</p>
+        </ion-col>  
+      </ion-row>
+      <ion-row padding>
+        <ion-col col-1>
+        <ion-icon name="pin">  </ion-icon>
+      </ion-col>
+        <ion-col col-3>
+          <p> To</p>
+        </ion-col>
+        <ion-col col-8>
+          <p>{{HistoryBookRide[0].to}}</p>
+        </ion-col>
+      </ion-row>   
+      <ion-row padding>
+          <ion-col col-1>
+          <ion-icon name="logo-usd"></ion-icon>
+          </ion-col>
+        <ion-col col-3>
+          <p> Fee</p>
+        </ion-col>
+        <ion-col col-8>
+          <p>{{HistoryBookRide[0].amount}}</p>
+        </ion-col>
+      </ion-row>
+      </ion-card>     
+     </ion-item> 
+  </ion-list>
 
-      <ion-item>
-        <ion-label>Customer Name</ion-label>
-        <ion-label>..</ion-label>
-      </ion-item>
-
-      <ion-item>
-        <ion-label>Distance</ion-label>
-        <ion-label>***</ion-label>
-      </ion-item>
-
-      <ion-item>
-        <ion-label>Fee</ion-label>
-        <ion-label>***</ion-label>
-      </ion-item>
-
-    </ion-card>
-
-  <button ion-button block (click)="openMenu()">
-   Rate My Ride
-  </button>
-  </div>
+   <ion-list  *ngSwitchCase="'share'">
+     <ion-item  *ngFor="let HistoryShareRide of HistoryShareRides">
+        <ion-card >
+        <ion-row padding>
+        <ion-col col-1>
+        <ion-icon name="pin">  </ion-icon>
+      </ion-col>  
+      <ion-col col-3>
+        <p> From</p>
+        </ion-col>
+        <ion-col col-8>
+          <p>{{HistoryShareRides[0].from}}</p>
+        </ion-col>  
+      </ion-row>
+      <ion-row padding>
+        <ion-col col-1>
+        <ion-icon name="pin">  </ion-icon>
+      </ion-col>
+        <ion-col col-3>
+          <p> To</p>
+        </ion-col>
+        <ion-col col-8>
+          <p>{{HistoryShareRides[0].to}}</p>
+        </ion-col>
+      </ion-row>   
+      <ion-row padding>
+          <ion-col col-1>
+          <ion-icon name="logo-usd"></ion-icon>
+          </ion-col>
+        <ion-col col-3>
+          <p> Fee</p>
+        </ion-col>
+        <ion-col col-8>
+          <p>{{HistoryShareRides[0].amount}}</p>
+        </ion-col>
+      </ion-row>
+      </ion-card>     
+     </ion-item> 
+   </ion-list>
 
 
 </ion-content>
+
