--- a/ShareMyTaxi/src/pages/register/register.html
+++ b/ShareMyTaxi/src/pages/register/register.html
@@ -19,19 +19,19 @@
               <ion-input type="text" placeholder="Email" name="email" [(ngModel)]="registerCredentials.email" required></ion-input>
             </ion-item>
             <ion-item>
-              <ion-input type="text" placeholder="Username" name="username" [(ngModel)]="registerCredentials.username" required></ion-input>
+              <ion-input type="text" placeholder="Username" name="username" [(ngModel)]="registerCredentials.username" required minlength="6" maxlength="20"></ion-input>
             </ion-item>
             <ion-item>
-              <ion-input type="password" placeholder="Password" name="password" [(ngModel)]="registerCredentials.password" required></ion-input>
+              <ion-input type="password" placeholder="Password" name="password" [(ngModel)]="registerCredentials.password" required minlength="6" maxlength="20"></ion-input>
             </ion-item>
             <ion-item>
-              <ion-input type="password" placeholder="Comfirmation Password" name="comfirmPassword" [(ngModel)]="registerCredentials.comfirmPassword" required></ion-input>
+              <ion-input type="password" placeholder="Comfirmation Password" name="comfirmPassword" [(ngModel)]="registerCredentials.comfirmPassword" required minlength="6" maxlength="20"></ion-input>
             </ion-item>
              <ion-item>
-              <ion-input  placeholder="NIC" type="text" name="nic" [(ngModel)]="registerCredentials.nic" required></ion-input>
+              <ion-input  placeholder="NIC" type="text" name="nic" [(ngModel)]="registerCredentials.nic" required minlength="10" maxlength="10"></ion-input>
             </ion-item>
             <ion-item>
-              <ion-input placeholder="Phone No" type="numbers" name="phone" [(ngModel)]="registerCredentials.phone" required></ion-input>
+              <ion-input placeholder="Phone No" type="numbers" name="phone"  [(ngModel)]="registerCredentials.phone" required minlength="10" maxlength="10"></ion-input>
             </ion-item>
             <ion-item>
             <ion-label>Gender</ion-label>
